# rust-auth-microservice

./: .env  Cargo.toml  README.md
.github/workflows/: build.yml  coverage.yml
src/: lib.rs  main.rs
