[package]
name = "authentication_microservice"
version = "0.1.0"
authors = ["Francis Masha <francismasha96@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "authentication_microservice"

[dependencies]
actix-web = "4.0.0"
argon2 = { version = "0.4", features = ["std"] }
async-trait = "0.1.56"
chrono = "0.4.19"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
num-traits = "0.2.15"
num-derive = "0.3.3"
prost = "0.10.4"
rand = "0.8.5"
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["full"] }
tonic = { version = "0.7.2", features = ["transport"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.2"
reqwest = "0.11.11"
